--- a/app/package.json
+++ b/app/package.json
@@ -64,6 +64,8 @@
     "ngx-ionic-image-viewer": "^0.7.5",
     "ngx-lottie": "^8.1.1",
     "ngx-socket-io": "^3.2.0",
+    "ngx-quill": "^15.0.0",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "swiper": "^8.4.4",
     "tslib": "^2.2.0",
