--- a/app/package.json
+++ b/app/package.json
@@ -56,6 +56,7 @@
     "cordova-plugin-navigationbar-color": "^0.1.0",
     "cordova-support-google-services": "^1.3.2",
     "dom-to-image": "^2.6.0",
+    "hammerjs": "^2.0.8",
     "ion-custom-scrollbar": "^1.1.3",
     "ionic-plugin-navigation-bar-color": "^1.0.2",
     "lottie-web": "^5.9.2",
@@ -63,8 +64,8 @@
     "ng-apexcharts": "^1.7.4",
     "ngx-ionic-image-viewer": "^0.7.5",
     "ngx-lottie": "^8.1.1",
-    "ngx-socket-io": "^3.2.0",
     "ngx-quill": "^15.0.0",
+    "ngx-socket-io": "^3.2.0",
     "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "swiper": "^8.4.4",
